--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,9 @@
   background-position: center;
   background-size: cover;
 }
+.footerBg {
+  background-image: url(../src/assets/image/footer-bg\ 1\ 1.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
